Fix bug of house logos stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,6 +773,8 @@ tr td:last-child {
 
     .house-link img {
         padding: .5rem;
+        width: 110px;
+        height: 110px;
     }
 
     #house-logo {
@@ -856,12 +858,6 @@ tr td:last-child {
         justify-content: center;
     }
 
-    .house-link img {
-        object-fit: scale-down;
-        max-width: 100%;
-        max-height: 100%;
-    }
-
     .fade {
         margin: 1rem 0 1rem;
     }
@@ -893,11 +889,6 @@ tr td:last-child {
         width: fit-content;
     }
 
-    .house-link {
-        max-width: 100%;
-        max-height: 100%;
-    }
-
     .choice-text {
         font-size: 1.2rem;
     }
@@ -919,7 +910,8 @@ tr td:last-child {
 }
 
 @media screen and (max-width: 1188px) and (min-width: 505px) {
-    .house {
+    .house,
+    .house-link {
         width: 170px;
         height: 170px;
     }
